log/build_2020-08-07_16-50-02/main/stdout_stderr.log
-- Found ament_cmake: 0.9.6 (/Users/mukuyo/ros2_ws/ros2-osx/share/ament_cmake/cmake)
-- Using PYTHON_EXECUTABLE: /usr/local/bin/python3
-- Found rclcpp: 2.0.2 (/Users/mukuyo/ros2_ws/ros2-osx/share/rclcpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_connext_c;rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Found rosidl_adapter: 1.0.1 (/Users/mukuyo/ros2_ws/ros2-osx/share/rosidl_adapter/cmake)
-- Could not find RTI Connext - skipping rosidl_typesupport_connext_c
-- Could not find RTI Connext - skipping rosidl_typesupport_connext_cpp
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_connext_cpp;rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 1.0.1 (/Users/mukuyo/ros2_ws/ros2-osx/share/rmw_implementation_cmake/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found message_info: 0.0.0 (/Users/mukuyo/Desktop/RI-AI/install/message_info/share/message_info/cmake)
-- Found ament_lint_auto: 0.9.5 (/Users/mukuyo/ros2_ws/ros2-osx/share/ament_lint_auto/cmake)
-- Added test 'copyright' to check source files copyright and LICENSE
-- Added test 'cppcheck' to perform static code analysis on C / C++ code
-- Configured cppcheck include dirs: 
-- Configured cppcheck exclude dirs and/or files: 
-- Added test 'cpplint' to check C / C++ code against the Google style
-- Configured cpplint exclude dirs and/or files: 
-- Added test 'flake8' to check Python code syntax and style conventions
-- Added test 'lint_cmake' to check CMake code style
-- Added test 'pep257' to check Python code against some of the style conventions in PEP 257
-- Added test 'uncrustify' to check C / C++ code style
-- Configured uncrustify additional arguments: 
-- Added test 'xmllint' to check XML markup files
-- Configuring done
-- Generating done
-- Build files have been written to: /Users/mukuyo/Desktop/RI-AI/build/main
Scanning dependencies of target main
[ 20%] Building CXX object CMakeFiles/main.dir/src/main.cpp.o
[ 40%] Building CXX object CMakeFiles/main.dir/src/game.cpp.o
[ 60%] Building CXX object CMakeFiles/main.dir/src/calculate.cpp.o
In file included from /Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.cpp:4:
/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.hpp:7:20: error: use of undeclared identifier 'geometry_msgs'
        void degree_atan2(geometry_msgs::msg::Pose2D object1, geometry_msgs::msg::Pose2D object2);
                          ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.hpp:7:56: error: use of undeclared identifier 'geometry_msgs'
        void degree_atan2(geometry_msgs::msg::Pose2D object1, geometry_msgs::msg::Pose2D object2);
                                                              ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.hpp:11:21: error: use of undeclared identifier 'message_info'
        float distace_calc(message_info::msg::DetectionBall object1, message_info::msg::DetectionBall object2);
                           ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.hpp:11:63: error: use of undeclared identifier 'message_info'
        float distace_calc(message_info::msg::DetectionBall object1, message_info::msg::DetectionBall object2);
                                                                     ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.cpp:6:13: error: return type of out-of-line definition of 'Calc::degree_improve' differs from that in the declaration
float Calc::degree_improve(float degree){
~~~~~       ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.hpp:5:7: note: previous declaration is here
        void degree_improve(float degree);
        ~~~~ ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.cpp:15:26: error: use of undeclared identifier 'geometry_msgs'
float Calc::degree_atan2(geometry_msgs::msg::Pose2D object1, geometry_msgs::msg::Pose2D object2){
                         ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.cpp:15:62: error: use of undeclared identifier 'geometry_msgs'
float Calc::degree_atan2(geometry_msgs::msg::Pose2D object1, geometry_msgs::msg::Pose2D object2){
                                                             ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.cpp:43:27: error: use of undeclared identifier 'message_info'
float Calc::distance_calc(message_info::msg::DetectionBall object1, message_info::msg::DetectionBall object2){
                          ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.cpp:43:69: error: use of undeclared identifier 'message_info'
float Calc::distance_calc(message_info::msg::DetectionBall object1, message_info::msg::DetectionBall object2){
                                                                    ^
9 errors generated.
make[2]: *** [CMakeFiles/main.dir/src/calculate.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
/Users/mukuyo/Desktop/RI-AI/src/main/src/game.cpp:31:16: warning: unused variable 'field_width' [-Wunused-variable]
         float field_width = geometry_message->field_width;
               ^
1 warning generated.
make[1]: *** [CMakeFiles/main.dir/all] Error 2
make: *** [all] Error 2
